test_case/rust-lang_rust/51090_392276410_14.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/feature-gate-abi.rs","byte_start":1224,"byte_end":1252,"line_start":26,"line_end":26,"column_start":1,"column_end":29,"is_primary":true,"text":[{"text":"exERROR intrinsics are subject to change","highlight_start":5,"highlight_end":37}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"add #![feature(intrinsics)] to the crate attributes to enable","code":null,"level":"help","spans":[],"children":[],"rendered":null}],"rendered":"error[E0658]: intrinsics are subject to change\n  --> /checkout/src/test/ui/feature-gate-abi.rs:30:5\n   |\nLL |     extern \"rust-intrinsic\" fn m1(); //~ ERROR intrinsics are subject to change\n   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n   |\n   = help: add #![feature(intrinsics)] to the crate attributes to enable\n\n"}
[00:43:58] {"message":"platform intrinsics are experimental and possibly buggy (see issue #27731)","code":{"code":"E0658","explanation":"\nAn unstable feature was used.\n\nErroneous code example:\n\n